# echo

./: .gitignore  Cargo.toml  README.md  echo.sketch  flake.nix
app-bevy/: Cargo.toml
app-bevy/src/: camera.rs  character.rs  main.rs  physics.rs  platforms.rs
app-bevy/src/character/: controller.rs  mod.rs
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/context/: home.rs  mod.rs
src/db/: mod.rs
src/post/: mod.rs
src/subcommands/: build.rs  delete.rs  edit.rs  init.rs  log.rs  mod.rs  new.rs  update.rs
src/template/: footer.html  head.html  index.html
src/utility/: mod.rs
src/web/styles/: _reset.scss  styles.scss  styles.sh
src/web/styles/fonts/krungthrep/: _krungthrep.scss
src/web/styles/fonts/san-francisco/: _san-francisco.scss
src/web/templates/: index.html  mod.rs  styles.css
tests/: cli.test.rs
