[package]
name = "echo"
version = "0.0.1"
authors = ["Amy Jie <git@xvrqt.com>"]
about = "Static micro-blog generator"
edition = "2018"

[dependencies]
tera = "0.11"
clap = "2.33.0"
rusqlite = "0.19.0"
user-error = "1.0.2"
lazy_static = "1.3.0"
lazy-static-include = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

